--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -46,11 +46,3 @@
     font-weight: 700;
   }
 }
-
-.previous-arrow {
-  margin-right: 0.3em;
-}
-
-.next-arrow {
-  margin-left: 0.3em;
-}
